# mer

./: .gitignore  README.md  pyproject.toml  setup.py
demo/: main.py
mer/: __init__.py  artifacts.py  mer.py  model.py  postprocess.py  predictor.py  vocab.py
merl/: __init__.py  constants.py  merl.py  model.py  surya.py  visualize.py
samples/: sample_1_text.md  sample_2_text.md  sample_3_text.md  sample_4_text.md  sample_5_text.md
tests/: test_mer.py  test_merl.py
