[project]
name = "ocr-service"
version = "0.1.0"
description = "OCR Data Generator with SQLite Metadata Storage and Query API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "fastapi[standard]>=0.116.1",
    "huggingface-hub>=0.25.0",
    "khmercut>=0.1.0",
    "nbconvert>=7.16.6",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "safetensors>=0.6.2",
    "torch>=2.8.0",
    "transformers>=4.56.0",
]

[dependency-groups]
dev = [
    "albumentations>=2.0.8",
    "datasets>=4.1.1",
    "editdistance>=0.8.1",
    "khmercut>=0.1.0",
    "mlflow>=3.4.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pytorch-lightning>=2.5.5",
    "timm>=1.0.20",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "editdistance>=0.8.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

